--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, 'Players home') %>
 <h1 class="danger">Numbers of players in our league: <%= @players.count %></h1>
 
 <table>
