--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,3 +1,5 @@
+
+<% content_for(:title, "#{@player.first_name}'s profile") %>
 <h1>This is the profile page for <%= @player.first_name %></h1>
 
 <table>
@@ -16,4 +18,5 @@
     </tr>
   </tbody>
 </table>
-<a href="/players">Home</a>
+<!--<a href="/players">Home</a>-->
+<%= link_to 'Home page', root_path %>
